# MeetPlan

./: .gitignore  Dockerfile  Makefile  Pipfile  docker-compose.yml  manage.py  pyproject.toml  readme.md  requirements.txt
.github/workflows/: codeql-analysis.yml
MeetPlan/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
MeetPlan/tools/: celery.py
PKU_PHY_SU/: __init__.py  celery.py  secret_config.ini.sample  secret_config.sample.ini  settings.py  urls.py  wsgi.py
PKU_PHY_SU/settings/: base.py  dev.py  pro.py  settings.py  test.py
PKU_PHY_SU/tools/: celery.py  storage.py
apps/account_auth/: admin.py  apps.py  decorators.py  forms.py  models.py  serializers.py  tasks.py  urls.py  views.py
apps/cmsadmin/: apps.py  forms.py  meetplan_view.py  tasks.py  urls.py  user_view.py  views.py
apps/filemanager/: admin.py  apps.py  models.py
apps/meet_plan/: admin.py  apps.py  context_processors.py  forms.py  models.py  (+7 more)
celery_tasks/: tasks.py
config/: config.sample.ini  nginx-sample.conf  uwsgi-sample.ini
db/: base_model.py
generate/: 2020-03-15-00-21-10_e9283f60-d660-4dcc-abe1-277a2864a4c3.csv
idl/: api.proto  api.thrift  base.thrift  meetplan.thrift  order.thrift  plan.thrift  user.thrift
server/: .gitignore  .hz  Makefile  go.mod  go.sum  kitex-all.sh  main.go  router.go  router_gen.go
templates/: 403.html  404.html  500.html  base.html  footer.html  index.html
utils/: mixin.py  rest.py  storage.py
web/: .env  .env.development  .env.production  .npmrc  components.d.ts  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
webserver/: nginx.conf  start.sample.sh  supervisor.sample.conf  uwsgi.sample.ini
(+605 files in other folders)
