[tool.poetry]
name = "meetplan"
version = "0.1.0"
description = ""
authors = ["Rainshaw <rxg@live.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.10"
django-redis = "^5.2.0"
celery = "^5.2.2"
django-celery-results = "^2.2.0"
django-celery-beat = "^2.2.1"
itsdangerous = "^2.0.1"
requests = "^2.26.0"
mysqlclient = "^2.1.0"
Pillow = "^8.4.0"
uWSGI = "^2.0.20"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
