[tool.poetry]
name = "meetplan"
version = "0.1.0"
description = ""
authors = ["Rainshaw <rxg@live.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.2.7"
django-redis = "^5.2.0"
celery = "^5.2.6"
django-celery-results = "^2.3.1"
django-celery-beat = "^2.2.1"
requests = "^2.27.1"
mysqlclient = "^2.1.0"
Pillow = "^9.1.0"
itsdangerous = "2.0.1"
chardet = "^5.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
